<resources>
    <string name="app_name">Assistant</string>
    <!-- Toast Messages -->
    <string name="app_id">5a13ea8c</string>
    <string name="camera_not_found">No camera harware found</string>
    <string name="take_photo_help">Touch anywhere on screen to take picture</string>
    <string name="Video">Video</string>
    <string name="Chat">Chat</string>
    <string name="Upload">Upload</string>
    <string name="AddMedicine">添加药物</string>
    <string name="Error">Error</string>
    <string name="Complete">Complete</string>
    <string name="close">CLOSE</string>
    <string name="diagnose">病情诊断</string>
    <string name="IndeterminateProgressSample">Indeterminate Progress Sample</string>
    <string name="IntegerProgressSample">Integer Progress Sample</string>
    <string name="StateChangeSample">State Change Sample</string>
    <string name="ProgressPaddingSample">Progress Padding Sample</string>
    <string name="CustomSelectorSample">Custom Selector Sample</string>
    <string name="action_settings">Settings</string>
    <string name="confirm">确定</string>
    <string name="settings_name" translatable="false">Assistant Settings</string>

    <string name="p2p_app_name">org.appspot.apprtc</string>
    <string name="start_activity">ConnectActivity</string>

    <array name="sample_list">
        <item>@string/IndeterminateProgressSample</item>
        <item>@string/IntegerProgressSample</item>
        <item>@string/StateChangeSample</item>z
        <item>@string/ProgressPaddingSample</item>
        <item>@string/CustomSelectorSample</item>
    </array>




    <string name="pref_miscsettings_key">misc_settings_key</string>
    <string name="pref_miscsettings_title">Miscellaneous settings.</string>

    <string name="pref_room_server_url_key">room_server_url_preference</string>
    <string name="pref_room_server_url_title">Photo recognition server URL.</string>
    <string name="pref_room_server_url_dlg">Enter a Photo recognition server URL.</string>
    <!--<string name="pref_room_server_url_default" translatable="false">https://appr.tc</string>-->
    <string name="pref_room_server_url_default" translatable="false">http://222.201.145.152:5000</string>

    <string name="pref_robot_id_key">robot_id_preference</string>
    <string name="pref_robot_id_title">Robot ID.</string>
    <string name="pref_robot_id_dlg">Enter a Robot ID number.</string>
    <string name="pref_robot_id_default" translatable="false">10000</string>

    <string name="pref_box_ip_key">Medicinal Box_IP_preference</string>
    <string name="pref_box_ip_title">Medicinal Box_IP.</string>
    <string name="pref_box_ip_dlg">Enter a Medicinal Box IP.</string>
    <string name="pref_box_ip_default" translatable="false">http://192.168.3.154:15000</string>

    <string name="pref_user_info_ip_key">user_info_ip_preference</string>
    <string name="pref_user_info_ip_title">user_info_ip.</string>
    <string name="pref_user_info_ip_dlg">Enter a userInfor server ip.</string>
    <string name="pref_user_info_ip_default" translatable="false">http://118.89.57.249:5000</string>
</resources>
