<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_helloword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jzy.helloword.Helloword">

    <!--<SurfaceView
        android:id="@+id/surfaceView"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />-->

    <com.dd.CircularProgressButton
        android:id="@+id/circularButton1"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:textColor="@color/cpb_white"
        android:textSize="18sp"
        app:cpb_textComplete="@string/Complete"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/Video"
        android:layout_above="@+id/circularButton2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp" />

    <com.dd.CircularProgressButton
        android:id="@+id/circularButton2"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:textColor="@color/cpb_white"
        android:textSize="18sp"
        app:cpb_textComplete="@string/Complete"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/Upload"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/circularButton1"
        android:layout_alignStart="@+id/circularButton1" />


    <com.dd.CircularProgressButton
        android:id="@+id/circularButton3"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:textColor="@color/cpb_white"
        android:textSize="18sp"
        app:cpb_textComplete="@string/Complete"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/Upload"
        android:layout_below="@+id/circularButton2"
        android:layout_alignLeft="@+id/circularButton2"
        android:layout_alignStart="@+id/circularButton2"
        android:layout_marginTop="17dp" />

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Hello World!" />-->
</RelativeLayout>
